# camada

./: CMakeLists.txt  README.md  requirements.txt
.github/workflows/: benchmark-master.yml  benchmark-pr.yml  build-linux-boolector.yml  build-linux-cvc4.yml  build-linux-mathsat.yml  build-linux-stp.yml  build-linux-yices.yml  build-linux-z3.yml  build-linux.yml  build-macos-boolector.yml  build-macos-cvc4.yml  build-macos-mathsat.yml  build-macos-stp.yml  build-macos-yices.yml  build-macos-z3.yml  build-macos.yml  build-windows.yml  build.yml  checkmarx-analysis.yml  codacy-analysis.yml  code-style.yml  codeql-analysis.yml  fast-check.yml  main.yml  release-consumer.yml  release.yml
doc/: CMakeLists.txt  Doxyfile.in  main.dox
regression/: CMakeLists.txt  array.test.h  bitwuzla.test.cpp  boolector.test.cpp  cvc4.test.cpp  cvc5.test.cpp  fp.test.h  main.cpp  mathsat.test.cpp  simple.test.cpp  simple.test.h  smtlib.test.cpp  smtlib_pipeline.test.h  stp.test.cpp  tests.h  tuple.test.h  yices.test.cpp  z3.test.cpp
regression/bench/: main.cpp
scripts/: baseline.txt  common.py  compare-bench.py  get-boolector.py  get-cvc4.py  get-cvc5.py  get-deps.py  get-mathsat.py  get-stp.py  get-yices.py  get-z3.py  release.py  solver-deps.py
scripts/cmake/: AddInstallRPATHSupport.cmake  AddUninstallTarget.cmake  CPM.cmake  CamadaConfig.cmake  CamadaDependencies.cmake  FindBOOLECTOR.cmake  FindBitwuzla.cmake  FindBoolector.cmake  FindCVC4.cmake  FindCVC5.cmake  FindMATHSAT.cmake  FindMathSAT.cmake  FindSTP.cmake  FindYICES.cmake  FindYices.cmake  FindZ3.cmake  InstallBasicPackageFiles.cmake  OptimizationCCache.cmake  Options.cmake  Sanitizers.cmake  camadafeatures.in  cmake_config.in  try_mathsat.cpp  try_z3.cpp
scripts/release-consumer/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bitwuzlasolver.cpp  bitwuzlasolver.h  boolectorsolver.cpp  boolectorsolver.h  camada.cpp  camada.h  camadaarena.h  camadaast.h  camadacache.h  camadacommon.h  camadaerror.h  camadaexpr.cpp  camadaexpr.h  camadafp.cpp  camadafp.h  camadahandle.h  camadaimpl.cpp  camadaimpl.h  camadasort.cpp  camadasort.h  camadatuple.cpp  camadatuple.h  camadautil.h  camadautils.h  cvc4solver.cpp  cvc4solver.h  cvc5solver.cpp  cvc5solver.h  mathsatsolver.cpp  mathsatsolver.h  smtlibsolver.cpp  smtlibsolver.h  stpsolver.cpp  stpsolver.h  utils.h  version.cpp  version.h  yicessolver.cpp  yicessolver.h  (+2 more)
src/boolector/: boolectorsolver.cpp  boolectorsolver.h
src/cvc4/: cvc4solver.cpp  cvc4solver.h
src/mathsat/: mathsatsolver.cpp
src/stp/: stpsolver.h
src/yices/: yicessolver.cpp  yicessolver.h
src/z3/: z3solver.h
